DevOps/Kubernetes/Pipeline/dev/gitlab.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment
  labels:
    app: gitlab
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      #hostname: "gitlab.ccdc.edu"
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:latest
        resources:
          requests:
            memory: "3Gi"
            cpu: "800m"
          limits:
            memory: "3Gi"
            cpu: "800m"
        volumeMounts:
        - name: etc
          mountPath: "/etc/gitlab"
        - name: var
          mountPath: "/var/opt/gitlab"
      volumes:
        - name: etc
          persistentVolumeClaim:
            claimName: gitlab-etc-claim
        - name: var
          persistentVolumeClaim:
            claimName: gitlab-var-claim

---

apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  labels:
    app: gitlab
  namespace: dev
spec:
  selector:
    app: gitlab
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  - name: https
    port: 443
    protocol: TCP
    targetPort: 433
  type: LoadBalancer

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: gitlab-ingress
#   namespace: dev
#   # annotations:
#   #   nginx.ingress.kubernetes.io/ssl-redirect: "true"
#   #   nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
#   #   kubernetes.io/tls-acme: "true"
#   #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#   #   kubernetes.io/ingress.allow-http: "false"
# spec:
#   ingressClassName: "nginx"
#   rules:
#   - host: gitlab.cyber.uml.edu
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: gitlab-service
#             port:
#               number: 8080
#   tls:
#     - hosts:
#       - gitlab.nexus-core.dev


# With cert-manager version
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: gitlab-ingress
#   annotations:
#     cert-manager.io/clusterissuer: "development-issuer"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     kubernetes.io/ingress.allow-http: "false"
#     kubernetes.io/tls-acme: "true"
#   namespace: dev
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - gitlab.nexus-core.dev
#     secretName: gitlab-tls
#   rules:
#   - host: gitlab.nexus-core.dev
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: gitlab
#             port:
#               number: 443
