DevOps/Kubernetes/Pipeline/dev/mealie-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-deployment
  labels:
    lab: mealie
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      lab: mealie
  template:
    metadata:
      labels:
        lab: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v1.0.0-RC1.1
        resources:
          requests:
            memory: "200Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "1"
        volumeMounts:
        - name: data
          mountPath: "/app/data"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data-longhorn-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  labels:
    lab: mealie
  namespace: homelab
spec:
  selector:
    lab: mealie
  ports:
  - name: ui
    port: 9925
    protocol: TCP
    targetPort: 9000
  type: ClusterIP


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ui-ingress
  namespace: homelab
  annotations:
    # If using certmanager
    # Used to provide wildcard domain prefixs to base domain
    kubernetes.io/tls-acme: "true"
    # This is clusterissuer you set up with cert-manager
    cert-manager.io/cluster-issuer: development-issuer
    # Default
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # I needed to add this for it to work
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: mealie.nexus-core.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie-ui-service
            port:
              number: 9925
  tls:
    - hosts:
      - mealie.nexus-core.dev
      secretName: mealie-ingress-tls
